// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render Avatar 1`] = `
<DocumentFragment>
  <div
    class="font-sans font-bold inline-flex items-center relative justify-center text-center uppercase text-gray-500 bg-gray-100 fill-current rounded-full ring-2 ring-white text-xs h-6 w-6"
  >
    <svg
      class="w-em h-em inline-block leading-em flex-shrink-0 text-current align-middle"
      focusable="false"
      viewBox="0 0 12 12"
    >
      <path
        d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
        fill="transparent"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.3"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<Avatar /> should render with AvatarBadge & children 1`] = `
<DocumentFragment>
  <div
    class="font-sans font-bold inline-flex items-center relative justify-center text-center uppercase text-gray-500 bg-gray-100 fill-current rounded-full ring-2 ring-white text-xs h-6 w-6"
  >
    <p>
      Some Child Element
    </p>
    <div
      class="text-xs h-2 w-2 absolute bottom-0 right-0"
    >
      *
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Avatar /> should render with AvatarBadge 1`] = `
<DocumentFragment>
  <div
    class="font-sans font-bold inline-flex items-center relative justify-center text-center uppercase text-gray-500 bg-gray-100 fill-current rounded-full ring-2 ring-white text-xs h-6 w-6"
  >
    <svg
      class="w-em h-em inline-block leading-em flex-shrink-0 text-current align-middle"
      focusable="false"
      viewBox="0 0 12 12"
    >
      <path
        d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
        fill="transparent"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.3"
      />
    </svg>
    <div
      class="text-xs h-2 w-2 absolute bottom-0 right-0"
    >
      *
    </div>
  </div>
</DocumentFragment>
`;
